# pure-pursuit

./: .gitignore  README.md  pyproject.toml
config/: pure-pursuit-config.json  robomower-config.json  robot-config.json  simulation-config.json
paths/: coverage-path-2x3.json  random-path-1.json
pure_pursuit/: __main__.py  plotting.py  pure_pursuit.py
pure_pursuit/animation/: animator.py  matplotlib_extensions.py
pure_pursuit/config/: pure_pursuit_config.py  robomower_config.py  robot_config.py  simulation_config.py
pure_pursuit/controller/: path_adapter.py  pure_pursuit_controller.py
pure_pursuit/model/: diff_drive_kinematics.py  robomower.py  robot.py
pure_pursuit/simulation/: simulation_data.py  simulator.py
pure_pursuit/utilities/: geometry.py  json_codable.py  math_extensions.py  print_colors.py
scripts/: generate_coverage_path.py  generate_random_path.py
